<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Menu">


    <ImageView
        android:id="@+id/i_notificacion"
        android:layout_width="74dp"
        android:layout_height="66dp"
        android:layout_gravity="right"
        app:srcCompat="@drawable/notificacion" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|clip_horizontal"
        android:text="¡Hola Daniela!"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        app:srcCompat="@drawable/user" />

    <Button
        android:id="@+id/b_miperfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Mi_Perfil"
        android:text="@string/miperfil" />

    <Button
        android:id="@+id/b_agendarcitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AgendarCita"
        android:text="@string/agendarcitas" />

    <Button
        android:id="@+id/b_vermiscitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Tus_Citas"
        android:text="@string/vermiscitas" />

    <Button
        android:id="@+id/b_clinicas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Mi_Clinica"
        android:text="Mi Clínica" />

    <Button
        android:id="@+id/b_cerrarsesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Iniciar_Sesion"
        android:text="@string/cerrarsesion" />

    <Button
        android:id="@+id/b_aboutt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="About"
        android:text="@string/about" />

    <TableRow
        android:layout_width="368dp"
        android:layout_height="140dp"
        android:orientation="vertical">

    </TableRow>


</LinearLayout>